feat: implement linear programming